--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "electron-squirrel-startup": "1.0.0",
     "file-type": "^18.7.0",
     "mime": "^3.0.0",
+    "sharp": "^0.32.6",
     "stream-mime-type": "^2.0.0"
   },
   "devDependencies": {
